--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,10 +7,10 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:sans-serif;
   background: #fff9e6;
   min-height: 100vh;
+  width: 100vw;
 }
 
 .App {
